# BioImageIT-v2

./: .gitignore  README.md  api.py  app_launcher.py  event_loop.py  launchfileauto-latest.vsix  logging_config.py  pyproject.toml
server/: main.py  sockets.py  websocket_manager.py
server/routes/: toolRoutes.py  workflowRoutes.py
server/static/react_build/: index.html
src/: __init__.py
src/ThumbnailManagement/: ThumbnailGenerator.py  generate_thumbnails.py
src/ToolManagement/: EnvironmentManager.py  EnvironmentManager2.py
src/Tools/Omero/: omero_upload.py
src/WorkflowModule/: WorkflowManager.py
tests/workflowManagerTest/: conftest.py  workflowManager_test.py
