[project]
authors = [{name = "carellihoula", email = "carellihoula10@gmail.com"}]
dependencies = [
    "quart>=0.19.5,<0.20",  
    "uvicorn>=0.34.2,<0.35",
    "pandas>=2.2.2,<3",
    "qtpy>=2.4.1,<3",
    "pyside6>=6.7.2,<7", 
    "pyside6-qtads>=4.3.0.2,<5",
    "pywebview >=4.0",
    "quart-cors >=0.8.0",
    "pydantic >=2.11.4"
     
]
name = "BioImageIT"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

# [tool.pixi.pypi-dependencies]
# bioimageit = { path = ".", editable = true }

[tool.pixi.dependencies] # Explicitly define dependencies using Conda.
pygobject = ">=3.50.0"  
pycairo = ">=1.28.0"  

[tool.pixi.tasks]
start = "python app_launcher.py"

