[project]
authors = [{name = "carellihoula", email = "carellihoula10@gmail.com"}]
dependencies = [  
    "uvicorn>=0.34.2,<0.35",
    "pandas>=2.2.2,<3",
    "qtpy>=2.4.1,<3",
    "pyside6>=6.7.2,<7", 
    "pyside6-qtads>=4.3.0.2,<5",
    "pywebview >=4.0",
    "pydantic >=2.11.4",
    "matplotlib>=3.10,<4",
    "simpleitk>=2.3.1",
    "typing-extensions==4.12.2", 
    "psutil>=6.1.0,<7", 
    "pyyaml>=6.0.2,<7",
    "scipy>=1.15.1,<2",
    "fastapi>=0.115.11,<0.116",
    "websockets>=15.0.1,<16",
    "wetlands>=0.2.0",
     
]
name = "BioImageIT"
requires-python = ">=3.9"
version = "0.1.0"
    
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short"
testpaths = [
    "tests",
]
# pythonpath = ["src"]

[tool.pixi.pypi-dependencies]
bioimageit = { path = ".", editable = true }
pytest = ">=8.4.1"
pytest-cov = ">=6.2.1"

[tool.pixi.dependencies] # Explicitly define dependencies using Conda.
omero-py = "==5.15.0"
pygobject = ">=3.50.0"  
pycairo = ">=1.28.0"  

[tool.pixi.tasks]
start = "python app_launcher.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]
